// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button control isActive 1`] = `
<WithStyles(Fab)
  isActive={true}
  size="small"
>
  Text
</WithStyles(Fab)>
`;

exports[`Button control render 1`] = `
<WithStyles(Fab)
  size="small"
>
  Text
</WithStyles(Fab)>
`;
